--- a/index.html
+++ b/index.html
@@ -405,13 +405,13 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="#" target="_blank">
+                                <a href="https://www.upwork.com/freelancers/~01e6102a5e46da651d?s=1017484851352699003" target="_blank">
                                     <i class="fa-brands fa-upwork"></i>
                                 </a>
                                 <a href="#" target="_blank">
                                     <i class="fa-brands fa-blogger"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://www.linkedin.com/in/omar-nawasreh-098807348/" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
                                 
